# Chama

./: Cargo.toml  README.md  index.html  script.js  style.css
ink_engine/: Cargo.toml  lib.rs
src/: main.rs
src/frontend/Chama/: index.html
src/frontend/Dash/: index.html  ms.jpg:Zone.Identifier  ms.png:Zone.Identifier  script.js  style.css  viral-marketing.png:Zone.Identifier
src/frontend/Finances/: index.html  script.js  style.css
src/frontend/Login/: index.html  index.js  style.css
src/frontend/proposal/: index.html
src/frontend/transact/: Transact.clar  index.html
target-install/: .rustc_info.json
target-install/release/.fingerprint/autocfg-d9cdac2bf517405b/: output-lib-autocfg
target-install/release/.fingerprint/proc-macro2-17df397cf606b7de/: output-build-script-build-script-build
target-install/release/.fingerprint/quote-43281e7c25dfb05e/: output-build-script-build-script-build
target-install/release/.fingerprint/unicode-ident-119cdc5c06d37655/: output-lib-unicode-ident
